--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "winston": "^3.8.2",
+    "winston-mongodb": "^5.1.0"
   }
 }
